--- a/backend/userService_PasswordChecker/src/main/resources/application.properties
+++ b/backend/userService_PasswordChecker/src/main/resources/application.properties
@@ -7,7 +7,7 @@ eureka.instance.prefer-ip-address=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/passwordchecker
 spring.datasource.username=root
-spring.datasource.password=Incedo@1234
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
